# Oblivion-cpp-errors

./: CMakeLists.txt  block.cpp  block.h  blockchain.cpp  blockchain.h  launch.cpp  launch.h  main.cpp  transaction.cpp  transaction.h  wallet.cpp  wallet.h
adresses/: private_key_gen.cpp  private_key_gen.h  pub_adress_generate.cpp  pub_adress_generate.h  pub_adress_isValid.cpp  pub_adress_isValid.h
crypto/: sha512.cpp  sha512.h
